k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-app-ingress
  namespace: back
  annotations:
    # Yeh logic /api/dashboard ko badal kar /dashboard kar dega
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*) # Yahan $2 mein 'dashboard' ya 'users' aayega
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend
            port:
              number: 3000
      - path: /()(.*) # Frontend ke liye rewrite as-is rakha hai
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-proxy
            port:
              number: 80
